--- a/index.html
+++ b/index.html
@@ -1,1 +1,128 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Accueil - NITERC - Photographe</title>
+    <link rel="stylesheet" href="style.css">
+    </head>
+<body>
 
+    <header class="site-header">
+        <div class="container header-container">
+            <div class="logo">
+                <a href="index.html">NITERC</a>
+            </div>
+            <nav class="main-navigation">
+                <ul>
+                    <li><a href="index.html" class="active">Accueil</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="services.html">Prestations</a></li>
+                    <li><a href="a-propos.html">À Propos</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <button class="menu-toggle" aria-label="Ouvrir le menu">☰</button>
+        </div>
+    </header>
+
+    <main>
+        <section class="hero">
+            <div class="container hero-content">
+                <h1>Photographe [Type : ex: Portrait & Immobilier]</h1>
+                <p class="tagline">[Petite phrase d'accroche qui définit le style ou la mission]</p>
+                <a href="portfolio.html" class="btn btn-primary">Découvrir mon travail</a>
+            </div>
+            </section>
+
+        <section class="portfolio-preview section-padding">
+            <div class="container">
+                <h2>Portfolio Récent</h2>
+                <div class="gallery-grid">
+                    <div class="gallery-item">
+                        <a href="portfolio.html#particuliers">
+                            <img src="chemin/vers/image_particulier_1.jpg" alt="Description de l'image particulier">
+                            </a>
+                    </div>
+                    <div class="gallery-item">
+                        <a href="portfolio.html#immobilier">
+                             <img src="chemin/vers/image_immo_1.jpg" alt="Description de l'image immobilier">
+                        </a>
+                    </div>
+                    <div class="gallery-item">
+                         <a href="portfolio.html#particuliers">
+                             <img src="chemin/vers/image_particulier_2.jpg" alt="Description de l'image particulier 2">
+                         </a>
+                    </div>
+                    </div>
+                <div class="text-center">
+                    <a href="portfolio.html" class="btn btn-secondary">Voir tout le portfolio</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="services-overview section-padding alternate-bg">
+             <div class="container">
+                <h2>Mes Prestations</h2>
+                <div class="services-list">
+                    <div class="service-item">
+                        <h3>Photographie Immobilière</h3>
+                        <p>Valorisation de biens pour vente ou location...</p>
+                        <a href="services.html#immobilier">En savoir plus</a>
+                    </div>
+                    <div class="service-item">
+                        <h3>Portraits (Particuliers)</h3>
+                        <p>Séances personnalisées en studio ou extérieur...</p>
+                        <a href="services.html#portraits">En savoir plus</a>
+                    </div>
+                    </div>
+                 <div class="text-center">
+                     <a href="services.html" class="btn btn-secondary">Voir toutes les prestations</a>
+                 </div>
+            </div>
+        </section>
+
+        <section class="about-preview section-padding">
+            <div class="container about-flex">
+                 <div class="about-text">
+                    <h2>Qui suis-je ?</h2>
+                    <p>[Court paragraphe présentant l'artiste, sa passion, son approche. Mettre en avant l'ambiance N&B/Bordeaux si pertinent ici]...</p>
+                    <a href="a-propos.html" class="btn btn-secondary">Lire la suite</a>
+                </div>
+            </div>
+        </section>
+
+         <section class="cta section-padding accent-bg">
+            <div class="container text-center">
+                <h2>Un projet en tête ?</h2>
+                <p>Discutons ensemble de vos besoins et de la manière dont je peux vous aider à les réaliser.</p>
+                <a href="contact.html" class="btn btn-primary">Contactez-moi</a>
+            </div>
+        </section>
+
+    </main>
+
+    <footer class="site-footer section-padding">
+        <div class="container footer-container">
+            <div class="footer-links">
+                <ul>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="services.html">Prestations</a></li>
+                    <li><a href="a-propos.html">À Propos</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    </ul>
+            </div>
+            <div class="footer-social">
+                <p>Suivez-moi :</p>
+                <a href="[Lien vers le compte Instagram]" target="_blank" rel="noopener noreferrer">Instagram</a>
+                </div>
+            <div class="footer-copyright">
+                 <p>&copy; <span id="current-year"></span> [Nom de l'Artiste]. Tous droits réservés.</p>
+                 <script>document.getElementById('current-year').textContent = new Date().getFullYear();</script>
+            </div>
+        </div>
+    </footer>
+
+    </body>
+</html>
