--- a/index.html
+++ b/index.html
@@ -33,34 +33,35 @@
                 <p class="tagline">[Petite phrase d'accroche qui définit le style ou la mission]</p>
                 <a href="portfolio.html" class="btn btn-primary">Découvrir mon travail</a>
             </div>
-            </section>
+        </section>
 
         <section class="portfolio-preview section-padding">
             <div class="container">
                 <h2>Portfolio Récent</h2>
                 <div class="gallery-grid">
                     <div class="gallery-item">
-                        <a href="portfolio.html#particuliers">
-                            <img src="chemin/vers/image_particulier_1.jpg" alt="Description de l'image particulier">
+                        <a href="portfolio.html#immobilier">
+                            <img src="https://raw.githubusercontent.com/soteo3d/NITERC/main/photo/immo.jpg"
+                                 alt="Exemple de photographie immobilière par [Nom de l'Artiste]">
                             </a>
                     </div>
                     <div class="gallery-item">
-                        <a href="portfolio.html#immobilier">
-                             <img src="chemin/vers/image_immo_1.jpg" alt="Description de l'image immobilier">
-                        </a>
+                        <a href="portfolio.html#particuliers">
+                             <img src="https://raw.githubusercontent.com/soteo3d/NITERC/main/photo/personne.jpg"
+                                  alt="Exemple de portrait par [Nom de l'Artiste]">
+                             </a>
                     </div>
                     <div class="gallery-item">
-                         <a href="portfolio.html#particuliers">
-                             <img src="chemin/vers/image_particulier_2.jpg" alt="Description de l'image particulier 2">
-                         </a>
+                         <a href="portfolio.html#evenements"> <img src="https://raw.githubusercontent.com/soteo3d/NITERC/main/photo/event.jpg"
+                                  alt="Exemple de photographie d'événement par [Nom de l'Artiste]">
+                             </a>
                     </div>
-                    </div>
+                </div>
                 <div class="text-center">
                     <a href="portfolio.html" class="btn btn-secondary">Voir tout le portfolio</a>
                 </div>
             </div>
         </section>
-
         <section class="services-overview section-padding alternate-bg">
              <div class="container">
                 <h2>Mes Prestations</h2>
@@ -75,7 +76,12 @@
                         <p>Séances personnalisées en studio ou extérieur...</p>
                         <a href="services.html#portraits">En savoir plus</a>
                     </div>
+                     <div class="service-item">
+                        <h3>Reportages Événementiels</h3>
+                        <p>Capturez les moments importants de vos événements...</p>
+                        <a href="services.html#evenements">En savoir plus</a>
                     </div>
+                </div>
                  <div class="text-center">
                      <a href="services.html" class="btn btn-secondary">Voir toutes les prestations</a>
                  </div>
@@ -84,7 +90,7 @@
 
         <section class="about-preview section-padding">
             <div class="container about-flex">
-                 <div class="about-text">
+                <div class="about-text">
                     <h2>Qui suis-je ?</h2>
                     <p>[Court paragraphe présentant l'artiste, sa passion, son approche. Mettre en avant l'ambiance N&B/Bordeaux si pertinent ici]...</p>
                     <a href="a-propos.html" class="btn btn-secondary">Lire la suite</a>
@@ -116,7 +122,7 @@
             <div class="footer-social">
                 <p>Suivez-moi :</p>
                 <a href="[Lien vers le compte Instagram]" target="_blank" rel="noopener noreferrer">Instagram</a>
-                </div>
+            </div>
             <div class="footer-copyright">
                  <p>&copy; <span id="current-year"></span> [Nom de l'Artiste]. Tous droits réservés.</p>
                  <script>document.getElementById('current-year').textContent = new Date().getFullYear();</script>
