--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil - [Nom de l'Artiste] - Photographe</title>
+    <title>Accueil - NITERC - Photographe</title>
     <link rel="stylesheet" href="style.css">
     </head>
 <body>
@@ -11,7 +11,7 @@
     <header class="site-header">
         <div class="container header-container">
             <div class="logo">
-                 <a href="index.html">[Nom de l'Artiste]</a>
+                 <a href="index.html">NITERC</a>
                  </div>
             <nav class="main-navigation">
                 <ul>
@@ -29,7 +29,7 @@
     <main>
         <section id="logo-section" class="full-screen-section">
             <div class="logo-container">
-                <img src="chemin/vers/votre/logo.png" alt="Logo [Nom de l'Artiste]">
+                <img src="photo/NITERC.png" alt="Logo NITREC">
                 </div>
         </section>
 
@@ -69,7 +69,7 @@
                  <a href="[Lien vers le compte Instagram]" target="_blank" rel="noopener noreferrer">Instagram</a>
              </div>
              <div class="footer-copyright">
-                  <p>&copy; <span id="current-year"></span> [Nom de l'Artiste]. Tous droits réservés.</p>
+                  <p>&copy; <span id="current-year"></span> NITERC. Tous droits réservés.</p>
                   <script>document.getElementById('current-year').textContent = new Date().getFullYear();</script>
              </div>
          </div>
