--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <section id="logo-section" class="full-screen-section">
             <div class="logo-container">
-                <img src="https://raw.githubusercontent.com/soteo3d/NITERC/main/NITERC.png" alt="Logo NITREC">
+                <img src="https://raw.githubusercontent.com/soteo3d/NITERC/main/NITERC.jpg" alt="Logo NITREC">
                 </div>
         </section>
 
