--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil - NITERC - Photographe</title>
+    
+    <link rel="icon" type="image/png" sizes="32x32" href="NITERC.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="NITERC.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="NITERC.png">
     <link rel="stylesheet" href="style.css">
     </head>
 <body>
