--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
              </div>
              <div class="footer-social">
                  <p>Suivez-moi :</p>
-                 <a href="[Lien vers le compte Instagram]" target="_blank" rel="noopener noreferrer">Instagram</a>
+                 <a href="https://www.instagram.com/niterc.jpg/" target="_blank" rel="noopener noreferrer">Instagram</a>
              </div>
              <div class="footer-copyright">
                   <p>&copy; <span id="current-year"></span> NITERC. Tous droits réservés.</p>
